# codex

./: .gitignore
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/codex-client/: Cargo.toml
codex-rs/codex-client/src/: lib.rs  ratls_transport.rs  transport.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: client.rs  default_client.rs  lib.rs  model_provider_info.rs  ratls_policy.rs
codex-rs/core/src/config/: mod.rs
codex-rs/core/src/models_manager/: manager.rs
codex-rs/docs/: ratls-integration.md
codex-rs/tui2/src/status/: card.rs
